--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -16,6 +16,7 @@
 <%= render 'relationships/follow_button', user: @user %>
 
   </aside>
+  
   <div class="col-sm-8">
     <ul class="nav nav-tabs nav-justified mb-3">
       
@@ -42,7 +43,7 @@
 ">Followers  <span class="badge badge-secondary">
 <%= @count_followers %>
 </span></a></li>
-
+    
 <li class="nav-item"><a href="
 <%= likes_user_path(@user) %>
 " class="nav-link 
@@ -50,10 +51,10 @@
 ">Favorites  <span class="badge badge-secondary">
 <%= @count_favorites %>
 </span></a></li>
-
     </ul>
     
-<%= render 'users', users: @followers %>
+    
+<%= render 'microposts/microposts', microposts: @favorite_microposts %>
 
   </div>
 </div>
