--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -23,14 +23,18 @@
 </li>
               <li class="dropdown-divider"></li>
               <li class="dropdown-item"><%= link_to 'Logout', logout_path, method: :delete %></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><%= link_to 'Favorites', likes_user_path%></li>
             </ul>
           </li>
         
 <% else %>
 
+
           <li class="nav-item">
 <%= link_to 'Signup', signup_path, class: 'nav-link' %>
 </li>
+
           <li class="nav-item">
 <%= link_to 'Login', login_path, class: 'nav-link' %>
 </li>
