--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -24,7 +24,7 @@
               <li class="dropdown-divider"></li>
               <li class="dropdown-item"><%= link_to 'Logout', logout_path, method: :delete %></li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item"><%= link_to 'Favorites', likes_user_path%></li>
+              <li class="dropdown-item"><%= link_to 'Favorites', likes_user_path(current_user) %></li>
             </ul>
           </li>
         
